--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,5 @@
 # APP_API_BASE_URL=http://host.docker.internal:3000 - so Saleor can reach App running on host, from the container.
 #
 # If developped with tunnels, set this empty, it will fallback to address the app is reached from (default port 3000).
-APP_IFRAME_BASE_URL=
-APP_API_BASE_URL=
+# APP_IFRAME_BASE_URL=
+# APP_API_BASE_URL=
