fix api_secret name

--- a/.env.example
+++ b/.env.example
@@ -15,4 +15,4 @@ FROM_POSTAL_CODE=
 
 # Shipstation API key and secret. Can be found in the Shipstation dashboard.
 SHIPSTATION_API_KEY=
-SHIPSTATION_API_KEY=
+SHIPSTATION_API_SECRET=
