--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "18.2.0",
     "urql": "^4.0.2",
     "vite": "^4.0.5",
-    "vitest": "^0.27.1"
+    "vitest": "^0.27.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "3.3.1",
