--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "graphql-tag": "^2.12.6",
     "jsdom": "^20.0.3",
     "next": "13.3.0",
+    "pino": "^8.19.0",
+    "pino-pretty": "^11.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "urql": "^4.0.2",
     "vite": "^4.0.5",
     "vitest": "^0.27.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zod-validation-error": "^3.0.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "3.3.1",
