--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shipstation-app",
   "version": "1.0.0",
   "private": true,
+  "license": "(BSD-3-Clause AND CC-BY-4.0)",
   "scripts": {
     "dev": "pnpm generate && NODE_OPTIONS='--inspect' next dev",
     "build": "pnpm generate && next build",
